--- a/template/Vagrantfile.erb
+++ b/template/Vagrantfile.erb
@@ -19,12 +19,11 @@ Vagrant.configure('2') do |config|
     ec2.security_groups = <%= ec2.security_groups %>
     ec2.iam_instance_profile_arn = '<%= ec2.instance_profile %>'
 
-    <% unless ec2.public_ip -%>
+<% unless ec2.public_ip -%>
     ## VPN Connected VPC
     ec2.associate_public_ip = false
     ec2.ssh_host_attribute = :private_ip_address
-    <% end -%>
-
+<% end -%>
     ec2.region = '<%= ec2.region %>'
     ec2.instance_type = '<%= ec2.instance_type %>'
 
@@ -55,12 +54,20 @@ Vagrant.configure('2') do |config|
     chef.log_level = :<%= log_level %>
 
     chef.cookbooks_path = '<%= chef.cookbook_path %>'
+<% unless chef.data_bag_path.nil? -%>
     chef.data_bags_path = '<%= chef.data_bag_path %>'
+<% end -%>
+<% unless chef.environment_path.nil? -%>
     chef.environments_path = '<%= chef.environment_path %>'
+<% end -%>
     chef.provisioning_path = '<%= chef.staging_directory %>'
 
     chef.run_list = <%= chef.run_list %>
+<% unless chef.environment.nil? -%>
     chef.environment = '<%= chef.environment %>'
+<% end -%>
+<% unless chef.node_attrs.nil? -%>
     chef.json = <%= chef.node_attrs %>
+<% end -%>
   end
 end
