Add builderator version attribute to Gemfile template, remove undefined defaults

--- a/template/Gemfile.erb
+++ b/template/Gemfile.erb
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-gem 'builderator'
+gem 'builderator', '<%= generator.version %>'
 
 <% if generator.gemfile.vagrant.install -%>
 gem 'vagrant', :github => 'mitchellh/vagrant',
