--- a/template/Vagrantfile.erb
+++ b/template/Vagrantfile.erb
@@ -5,42 +5,42 @@ Vagrant.configure('2') do |config|
   config.vm.hostname = 'builderator-<%= build_name %>'
 
   ## Local Provider
-  config.vm.provider '<%= local.provider %>' do |local, override|
-    local.memory = <%= local.memory %>
-    local.cpus = <%= local.cpus %>
+  config.vm.provider '<%= profile.current.vagrant.local.provider %>' do |local, override|
+    local.memory = <%= profile.current.vagrant.local.memory %>
+    local.cpus = <%= profile.current.vagrant.local.cpus %>
 
-    override.vm.box = '<%= local.box %>'
-    override.vm.box_url = '<%= local.box_url %>'
+    override.vm.box = '<%= profile.current.vagrant.local.box %>'
+    override.vm.box_url = '<%= profile.current.vagrant.local.box_url %>'
   end
 
   ## EC2 Provider
-  config.vm.provider '<%= ec2.provider %>' do |ec2, override|
-    override.vm.box = '<%= ec2.box %>'
-    override.vm.box_url = '<%= ec2.box_url %>'
-    override.ssh.username = '<%= ec2.ssh_username %>'
+  config.vm.provider '<%= profile.current.vagrant.ec2.provider %>' do |ec2, override|
+    override.vm.box = '<%= profile.current.vagrant.ec2.box %>'
+    override.vm.box_url = '<%= profile.current.vagrant.ec2.box_url %>'
+    override.ssh.username = '<%= profile.current.vagrant.ec2.ssh_username %>'
 
-    ec2.region = '<%= ec2.region %>'
-<% if ec2.has?(:subnet_id) -%>
-    ec2.subnet_id = '<%= ec2.subnet_id %>'
+    ec2.region = '<%= profile.current.vagrant.ec2.region %>'
+<% if profile.current.vagrant.ec2.has?(:subnet_id) -%>
+    ec2.subnet_id = '<%= profile.current.vagrant.ec2.subnet_id %>'
 <% end -%>
 
     ## VPN Connected VPC
-<% if ec2.has?(:associate_public_ip) -%>
-    ec2.associate_public_ip = <%= ec2.associate_public_ip %>
+<% if profile.current.vagrant.ec2.has?(:associate_public_ip) -%>
+    ec2.associate_public_ip = <%= profile.current.vagrant.ec2.associate_public_ip %>
 <% end -%>
-    ec2.ssh_host_attribute = :<%= ec2.ssh_host_attribute %>
+    ec2.ssh_host_attribute = :<%= profile.current.vagrant.ec2.ssh_host_attribute %>
 
-<% if ec2.has?(:instance_type) -%>
-    ec2.instance_type = '<%= ec2.instance_type %>'
+<% if profile.current.vagrant.ec2.has?(:instance_type) -%>
+    ec2.instance_type = '<%= profile.current.vagrant.ec2.instance_type %>'
 <% end -%>
-<% if ec2.has?(:security_groups) -%>
-    ec2.security_groups = <%= ec2.security_groups %>
+<% if profile.current.vagrant.ec2.has?(:security_groups) -%>
+    ec2.security_groups = <%= profile.current.vagrant.ec2.security_groups %>
 <% end -%>
-<% if ec2.has?(:iam_instance_profile_arn) -%>
-    ec2.iam_instance_profile_arn = '<%= ec2.iam_instance_profile_arn %>'
+<% if profile.current.vagrant.ec2.has?(:iam_instance_profile_arn) -%>
+    ec2.iam_instance_profile_arn = '<%= profile.current.vagrant.ec2.iam_instance_profile_arn %>'
 <% end -%>
-<% if ec2.has?(:source_ami) -%>
-    ec2.ami = '<%= ec2.source_ami %>'
+<% if profile.current.vagrant.ec2.has?(:source_ami) -%>
+    ec2.ami = '<%= profile.current.vagrant.ec2.source_ami %>'
 <% end -%>
   end
 
@@ -56,7 +56,7 @@ Vagrant.configure('2') do |config|
   ##
   # Sync build artifacts to the VM
   ##
-<% artifact.each do |name, artifact| -%>
+<% profile.current.artifact.each do |name, artifact| -%>
   config.vm.provision :file,
                       :source => '<%= artifact.path %>',
                       :destination => '<%= artifact.destination %>'
@@ -64,23 +64,23 @@ Vagrant.configure('2') do |config|
 
   config.omnibus.chef_version = '<%= chef.version %>'
   config.vm.provision :chef_solo do |chef|
-    chef.log_level = :<%= log_level %>
+    chef.log_level = :<%= chef.log_level %>
 
-    chef.cookbooks_path = '<%= chef.cookbook_path %>'
-<% if chef.has?(:data_bag_path) -%>
-    chef.data_bags_path = '<%= chef.data_bag_path %>'
+    chef.cookbooks_path = '<%= local.cookbook_path %>'
+<% if local.has?(:data_bag_path) -%>
+    chef.data_bags_path = '<%= local.data_bag_path %>'
 <% end -%>
-<% if chef.has?(:environment_path) -%>
-    chef.environments_path = '<%= chef.environment_path %>'
+<% if local.has?(:environment_path) -%>
+    chef.environments_path = '<%= local.environment_path %>'
 <% end -%>
     chef.provisioning_path = '<%= chef.staging_directory %>'
 
-    chef.run_list = <%= chef.run_list %>
-<% if chef.has?(:environment) -%>
-    chef.environment = '<%= chef.environment %>'
+    chef.run_list = <%= profile.current.chef.run_list %>
+<% if profile.current.chef.has?(:environment) -%>
+    chef.environment = '<%= profile.current.chef.environment %>'
 <% end -%>
-<% if chef.has?(:node_attrs) -%>
-    chef.json = <%= chef.node_attrs %>
+<% if profile.current.chef.has?(:node_attrs) -%>
+    chef.json = <%= profile.current.chef.node_attrs %>
 <% end -%>
   end
 end
