--- a/template/Vagrantfile.erb
+++ b/template/Vagrantfile.erb
@@ -20,17 +20,28 @@ Vagrant.configure('2') do |config|
     override.ssh.username = '<%= ec2.ssh_username %>'
 
     ec2.region = '<%= ec2.region %>'
+<% if ec2.has?(:subnet_id) -%>
     ec2.subnet_id = '<%= ec2.subnet_id %>'
+<% end -%>
 
     ## VPN Connected VPC
+<% if ec2.has?(:associate_public_ip) -%>
     ec2.associate_public_ip = <%= ec2.associate_public_ip %>
+<% end -%>
     ec2.ssh_host_attribute = :<%= ec2.ssh_host_attribute %>
 
+<% if ec2.has?(:instance_type) -%>
     ec2.instance_type = '<%= ec2.instance_type %>'
+<% end -%>
+<% if ec2.has?(:security_groups) -%>
     ec2.security_groups = <%= ec2.security_groups %>
+<% end -%>
+<% if ec2.has?(:iam_instance_profile_arn) -%>
     ec2.iam_instance_profile_arn = '<%= ec2.iam_instance_profile_arn %>'
-
+<% end -%>
+<% if ec2.has?(:source_ami) -%>
     ec2.ami = '<%= ec2.source_ami %>'
+<% end -%>
   end
 
   # config.vm.network :forwarded_port, :host => 9200, :guest => 9200
@@ -56,19 +67,19 @@ Vagrant.configure('2') do |config|
     chef.log_level = :<%= log_level %>
 
     chef.cookbooks_path = '<%= chef.cookbook_path %>'
-<% unless chef.data_bag_path.nil? -%>
+<% if chef.has?(:data_bag_path) -%>
     chef.data_bags_path = '<%= chef.data_bag_path %>'
 <% end -%>
-<% unless chef.environment_path.nil? -%>
+<% if chef.has?(:environment_path) -%>
     chef.environments_path = '<%= chef.environment_path %>'
 <% end -%>
     chef.provisioning_path = '<%= chef.staging_directory %>'
 
     chef.run_list = <%= chef.run_list %>
-<% unless chef.environment.nil? -%>
+<% if chef.has?(:environment) -%>
     chef.environment = '<%= chef.environment %>'
 <% end -%>
-<% unless chef.node_attrs.nil? -%>
+<% if chef.has?(:node_attrs) -%>
     chef.json = <%= chef.node_attrs %>
 <% end -%>
   end
