--- a/template/Vagrantfile.erb
+++ b/template/Vagrantfile.erb
@@ -10,7 +10,9 @@ Vagrant.configure('2') do |config|
     local.cpus = <%= profile.current.vagrant.local.cpus %>
 
     override.vm.box = '<%= profile.current.vagrant.local.box %>'
+<% if profile.current.vagrant.local.has?(:box_url) -%>
     override.vm.box_url = '<%= profile.current.vagrant.local.box_url %>'
+<% end -%>
   end
 
   ## EC2 Provider
@@ -68,8 +70,14 @@ Vagrant.configure('2') do |config|
 <% unless profile.current.chef.environment.nil? -%>
     chef.environment = '<%= profile.current.chef.environment %>'
 <% end -%>
-<% unless profile.current.chef.node_attrs.nil? -%>
+
+<% if profile.current.chef.node_attrs.nil? -%>
+    chef.json = {}
+<% else -%>
     chef.json = <%= profile.current.chef.node_attrs %>
 <% end -%>
+
+    ## Tell Chef that this is a Vagrant build
+    chef.json[:vagrant] = true
   end
 end
