Update the embedded berkshelf version to ~> 4.3
Berkshelf 4 upgraded the solve library to major version 2. This changed default behavior in such a was that
broke resolution of circular cookbook dependencies. We need to explicitly install dep_selector and specify the
gecode solver engine.

--- a/template/Vagrantfile.erb
+++ b/template/Vagrantfile.erb
@@ -2,6 +2,8 @@
 # vi: set ft=ruby :
 
 Vagrant.configure('2') do |config|
+  config.berkshelf.enabled = false if Vagrant.has_plugin? 'vagrant-berkshelf'
+
   config.vm.hostname = 'builderator-<%= build_name %>'
 
   ## Local Provider
