--- a/template/Vagrantfile.erb
+++ b/template/Vagrantfile.erb
@@ -77,10 +77,8 @@ Vagrant.configure('2') do |config|
 <% if profile.current.chef.node_attrs.nil? -%>
     chef.json = {}
 <% else -%>
-    chef.json = <%= profile.current.chef.node_attrs %>
-<% end -%>
-
     ## Tell Chef that this is a Vagrant build
-    chef.json[:vagrant] = true
+    chef.json = <%= { :vagrant => true }.merge(profile.current.chef.node_attrs) %>
+<% end -%>
   end
 end
