--- a/template/Berksfile.erb
+++ b/template/Berksfile.erb
@@ -8,3 +8,5 @@ source '<%= s %>'
 <% cookbook.depends.each do |name, cookbook| -%>
 cookbook '<%= name %>', '<%= cookbook.fetch(:version, '>= 0.0.0') %>', <%= cookbook.to_hash %>
 <% end -%>
+
+solver :<%= berkshelf.solver %>
