--- a/template/Vagrantfile.erb
+++ b/template/Vagrantfile.erb
@@ -35,6 +35,7 @@ Vagrant.configure('2') do |config|
     ec2.iam_instance_profile_arn = '<%= profile.current.vagrant.ec2.iam_instance_profile_arn %>'
 
     ec2.ami = '<%= profile.current.vagrant.ec2.source_ami %>'
+    ec2.tags = <%= profile.current.vagrant.ec2.tags %>
   end
 
   # config.vm.network :forwarded_port, :host => 9200, :guest => 9200
