--- a/template/Vagrantfile.erb
+++ b/template/Vagrantfile.erb
@@ -38,7 +38,13 @@ Vagrant.configure('2') do |config|
     ec2.tags = <%= profile.current.vagrant.ec2.tags %>
   end
 
-  # config.vm.network :forwarded_port, :host => 9200, :guest => 9200
+<% profile.current.vagrant.port.each do |name, port| -%>
+  config.vm.network :forwarded_port, :host => <%= port.host %>, :guest => <%= port.guest %> # <%= name %>
+<% end -%>
+
+<% profile.current.vagrant.sync.each do |name, sync| -%>
+  config.vm.synced_folder "<%= sync.path %>", "<%= sync.destination %>" # <%= name %>
+<% end -%>
 
   ##
   # Use the standard data directory for Chef
