--- a/template/Vagrantfile.erb
+++ b/template/Vagrantfile.erb
@@ -94,4 +94,12 @@ Vagrant.configure('2') do |config|
     ## Tell Chef that this is a Vagrant build
     chef.json[:vagrant] = true
   end
+
+<% profile.current.provisioners.each do |name, provisioner| -%>
+  config.vm.provision :<%= name %>,
+                      <%- provisioner.each_with_index do |p, i| -%>
+                      :<%= p.first %> => <%= p.last %><% if provisioner.size - 1 != i %>,<% end %>
+                      <%- end -%>
+
+<%- end -%>
 end
